[package]
name = "ebook_flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
chrono = { version = "0.4.35", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }

